plogapp/tests/errors/doubleAttDecl.plog
sorts
#s = {a}.
attributes
a: #s -> #s.
a: #s, #s -> #s.
statements

